syntax = "proto3";

package com.unla.stockearte;

// Opciones para generar c√≥digo Java
option java_multiple_files = true;
option java_package = "com.unla.stockearte";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
}

message AuthenticateUserRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  string token = 1;
}